Rename to playmary

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       };
     </script>
 
-    <script src="musicbox.js" type="text/javascript"></script>
-    <script type="text/javascript">goog.require("musicbox.util");</script>
-    <script type="text/javascript">goog.require("musicbox.one");</script>
+    <script src="playmary.js" type="text/javascript"></script>
+    <script type="text/javascript">goog.require("playmary.util");</script>
+    <script type="text/javascript">goog.require("playmary.one");</script>
   </body>
 </html>
